2001-10-29  Michael Yount <csf@moscow.com>

	* bin/mj_confirm:  Revise the appearance to resemble the
	other WWW interfaces more closely.

	* lib/Majordomo.pm:  (_show)  Determine which lists are
        owned by the address in question.  Suggested by Roger Klorese.

        * lib/Mj/Format.pm:  (tokeninfo)  Add ISPOST and VICTIM
        substitutions to support conditional "accept" buttons and
        clearer instructions.

	* lib/Mj/Util.pm:  (n_defaults)  Bugfix:  remove suffixes
	from iterated commands.  

2001-10-28  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (archive)  Add KILOBYTES and
	TOTAL_KILOBYTES substitutions to allow message size statistics
	to be displayed by the archive-stats command.
	
2001-10-27  Michael Yount <csf@moscow.com>

	* bin/mj_shell,mj_wwwadm:  Use the message returned by 
	Majordomo::valid_list if a list validation error occurs.

	* lib/Majordomo.pm:  (valid_list)  Make use of the
	relocated_lists configuration setting to rewrite old list names.
	(rekey)  Allow the use of a pattern with the rekey-verify and
	rekey-repair commands.  Suggested by Roger Klorese.

	* lib/mj_cf_data.pl,mj_cf_defs.pl:  Add support for the GLOBAL
	relocated_lists configuration setting.

	* lib/Mj/CommandProps.pm:  Add support for the use of a pattern
	with the rekey-verify and rekey-repair commands.

	* lib/Mj/Config.pm:  (parse_relocated_lists)  New routine.
	Parse the GLOBAL relocated_lists configuration setting.

	* lib/Mj/Parser.pm:  (parse_part)  Use the message returned
	by Majordomo::valid_list if a list validation error occurs.

2001-10-23  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (substitute_vars_format)  Bugfix:
	unescape dollar signs if no array substitutions are present.
	(_register, _subscribe)  Add support for 'R' and 'U' flags
	in the welcome_files setting.

	* lib/Mj/Config.pm:  (parse_welcome_files)  Add support
	for the 'R' and 'U' flags.

	* lib/Mj/Format.pm:  (rekey)  Bugfix:  Include the count